<resources>
    <string name="app_name">PaperGrainRecognition</string>
    <string name="labelOriginal">Original</string>
    <string name="btnChoosePicture">Choose</string>
    <string name="btnOpenCamera">Camera</string>
    <string name="labelSample">Sample</string>
    <string name="btnBrightness">Brightness</string>
    <string name="btnRecognition">Recognition</string>
    <string name="btnResult">Result</string>
    <string name="descBrightness">Adjust brightness</string>
    <string name="descRecognition">Choose picture</string>
    <string name="descResult">Generate result</string>
    <string name="btnStart">Start</string>
    <string name="btnAbort">Abort</string>
    <string name="switchBluetooth">Bluetooth</string>
    <string name="textConnectionStatus">Connection Status</string>
    <string name="textConnecting">Connecting</string>
    <string name="textConnected">Connected</string>
    <string name="textDisconnected">Disconnected</string>
    <string name="textAdjustBrightness">Brightness</string>
    <string name="textMatchGroup">Match Group</string>
    <string name="textCW_SSIM">CW-SSIM Value</string>
    <string name="textMatchResult">Match Result</string>
    <string name="descMatchPicture">Display Match Result</string>
    <string name="textInstallFileManager">Please install file manager</string>
    <string name="textChoosePicture">Please choose picture</string>
    <string name="textON">ON</string>
    <string name="textOFF">OFF</string>
    <string name="textAllowBluetooth">Please allow bluetooth, or this application will not work correctly!</string>
    <string name="OriginalFolderName" translatable="false">Original</string>
    <string name="textPicNotFound">Picture Not Found</string>
    <string name="textCameraGranted" type="id">Camera Permission Granted</string>
    <string name="textCameraDenied">Camera Permission Denied</string>
    <string name="textWrongConnecting">Wrong Connecting</string>
    <string name="textBluetoothStatus">Bluetooth Status</string>
    <string name="textUnexpectedError">Unexpected Error</string>
    <string name="textDisconnecting">Disconnecting</string>
    <string name="SampleFolderName" translatable="false">Sample</string>
    <string name="textFailToSaveImage">Fail to save image!</string>
    <string name="textAfterDenying">Please allow needed permission, or it will not work!</string>
    <string name="textReadExternalStorageGranted">Read External Storage Granted</string>
    <string name="textWriteExternalStorageGranted">Write External Storage Granted</string>
    <string name="textReadExternalStorageDenied">Read External Storage Denied</string>
    <string name="textWriteExternalStorageDenied">Write External Storage Denied</string>
    <string name="textNullImage">Image does not exist!</string>
    <string name="btnClear">Clear</string>
    <string name="textOneMoreClickToExit">One more click to exit</string>
    <string name="descToast">toast</string>
    <string name="textAllowCamera">Please allow camera, or this function will not work correctly!</string>
    <string name="textHistory">History</string>
    <string name="btnDelete">Delete</string>
    <string name="textEmptyDatabase">Empty Database</string>
    <string name="textStartMatching">Start Processing!</string>
    <string name="textBlank" translatable="false">" "</string>
    <string name="textClearDesc">Are you sure to clear history? Once be performed, record cannot be restored!</string>
    <string name="textConfirm">Confirm</string>
    <string name="textCancel">Cancel</string>
    <string name="textWarning">Warning</string>
    <string name="textDeleteSucceeded">Succeeded to delete!</string>
    <string name="textDeleteFailed">Failed to delete!</string>
    <string name="labelMatch">Match</string>
    <string name="descSample">Sample</string>
    <string name="descOriginal">Original</string>
    <string name="descZoom">Touch to close</string>
    <string name="textWrongPicture">Pictures sizes unmatch!</string>
    <string name="textProcessing">Pictures Processing!</string>
    <string name="textProcessDone">Process is done!</string>
    <string name="CameraFolderName" translatable="false">Camera</string>
    <string name="ResultFolderName" translatable="false">Result</string>
    <string name="textProcessAborted">Process is aborted!</string>
    <string name="textNotProcessing">Process was not started!</string>
    <string name="textProcessAborting">Start aborting!</string>
    <string name="SURFFolderName" translatable="false">SURF</string>
    <string name="textClearSucceeded">Succeeded to clear!</string>
    <string name="WriteDone">Data writing finished!</string>
    <string name="WriteStart">Data writing starts!</string>
    <string name="descLoading">Loading Animation</string>
</resources>