<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recognition"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/GroupLayout"
                android:layout_width="match_parent"
                android:background="@drawable/gray_background"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/Black"
                    android:text="@string/textMatchGroup"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:entries="@array/picture_index" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SSIMLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gray_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textSSIM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textSSIM"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/gray_background"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textMatchResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textMatchResult"
                    android:textColor="@color/Black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewMatchPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/descMatchPicture"
                app:srcCompat="@drawable/green_background" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/MenuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/BrightnessLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descBrightness"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/sun" />

                <TextView
                    android:id="@+id/btnBrightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnBrightness"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RecognitionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnRecognition"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descRecognition"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/magnifier" />

                <TextView
                    android:id="@+id/btnRecognition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnRecognition"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ResultLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnResult"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descResult"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:text="@string/btnBrightness"
                    app:srcCompat="@drawable/write" />

                <TextView
                    android:id="@+id/btnResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnResult"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>