<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recognition"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/BrightnessFunctionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/switchBluetooth"
                android:textColor="#8A000000"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/PairLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textPairingStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textPairingStatus"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textIsPaired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/AdjustBrigtnessLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textAdjustBrightness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|fill_horizontal|top"
                    android:layout_weight="1"
                    android:text="@string/textAdjustBrightness"
                    android:textSize="24sp" />

                <SeekBar
                    android:id="@+id/seekBarAdjustBrightness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/MenuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnBrightness"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descBrightness"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/sun" />

                <TextView
                    android:id="@+id/btnBrightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnBrightness"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnRecognition"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descRecognition"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/magnifier" />

                <TextView
                    android:id="@+id/btnRecognition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnRecognition"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imBtnResult"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:contentDescription="@string/descResult"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:text="@string/btnBrightness"
                    app:srcCompat="@drawable/write" />

                <TextView
                    android:id="@+id/btnResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btnResult"
                    android:textColor="@color/Black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>